<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mech_bgd"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login_Towing">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.cardview.widget.CardView android:background="@drawable/edit_text" android:layout_height="314dp" android:layout_width="match_parent" android:layout_marginRight="19dp" android:layout_marginTop="180dp" android:layout_marginLeft="19dp" app:cardElevation="20dp" app:cardCornerRadius="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="14dp">

        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_text"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="20dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/epass"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_text"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textSize="16dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="190dp"
            android:layout_height="53dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/end_red"
            android:text="@string/sign_in"
            android:textSize="18dp"
            app:cornerRadius="20dp" />


        -

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="12dp"
                android:text="@string/doesn_t_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="12dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/link"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        -

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="12dp"
                android:text="@string/forget_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textColor="@color/link"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>