<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="305dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register_customer">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="12dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="vertical"

                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/custpicUpload"
                    android:layout_width="173dp"
                    android:layout_height="99dp"
                    android:layout_weight="1"
                    app:civ_border_color="@color/end_red"
                    app:civ_border_width="2dp"
                    android:src="@drawable/ic_person" />
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/edit_text"
                    android:id="@+id/username"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="20dp"
                    android:hint="@string/full_name"
                    android:padding="10dp"
                    android:maxLength="20"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:layout_marginTop="10dp"
                    android:textColorHighlight="@color/cardview_dark_background" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/edit_text"
                    android:id="@+id/cnic"
                    android:drawableLeft="@drawable/ic_cnic"
                    android:drawablePadding="20dp"
                    android:hint="Cnic: 00000-0000000-0"
                    android:maxLength="15"
                    android:padding="10dp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginTop="25dp"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="20dp"
                    android:hint="Phone Number: 0000-0000000"
                    android:maxLength="12"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/edit_text"
                    android:id="@+id/emailid"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="20dp"
                    android:hint="Email Address"
                    android:padding="10dp"

                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginTop="25dp"
                    android:textColorHighlight="@color/cardview_dark_background" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:drawablePadding="20dp"
                        android:padding="10dp"
                        android:hint="@string/password"
                        android:background="@drawable/edit_text"
                        android:inputType="textPassword"
                        android:textSize="16dp"
                        android:layout_marginTop="25dp"
                        android:drawableStart="@drawable/ic_password" />

                    <ImageView
                        android:id="@+id/show_hide_pass"
                        android:layout_width="49dp"
                        android:layout_height="34dp"
                        android:layout_marginLeft="280dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/hide_pass" />

                </RelativeLayout>
                <Button
                    android:gravity="center"
                    android:id="@+id/register"
                    android:layout_width="190dp"
                    android:layout_height="53dp"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="@color/end_red"
                    android:text="@string/register"
                    android:textSize="18dp"
                    app:cornerRadius="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_a_member"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:layout_marginBottom="12dp"

                        />

                    <TextView
                        android:id="@+id/signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="12dp"
                        android:text="Login"
                        android:textAlignment="center"
                        android:textColor="@color/link"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>